# mgkdb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean_build_all.sh
cmake/: CompilerWarnings.cmake  CustomFunctions.cmake  GenerateAndInstallConfig.cmake  MgKdbConfig.cmake.in  ProjectOptions.cmake  StandardProjectSettings.cmake
coro_tmp/: CMakeLists.txt
coro_tmp/include/: mg_defs.h
coro_tmp/src/: CMakeLists.txt  tpmux.cpp
io/: CMakeLists.txt
io/include/: MgCircularBuffer.h  MgIoDefs.h
io/src/: CMakeLists.txt  MgCircularBuffer.cpp
io/test/: CMakeLists.txt  MgCircularBufferIntegrationTest.cpp  MgCircularBufferTest.cpp  MgIoMockDefs.h
iou/: CMakeLists.txt  README.md
iou/example/: CMakeLists.txt  mg_iou_test.cpp
ipc++/: .gitignore  CMakeLists.txt  COPYING  README.md  configure.sh
ipc++/app/: CMakeLists.txt  PrinterApp.cpp  WriterFun.cpp
ipc++/docs/: Doxyfile  README.md
ipc++/examples/: CMakeLists.txt  README.md  connect_to_kdb.cpp  connect_to_kdb_app.cpp  connect_to_kdb_lib.cpp  demo_circular_buffer.cpp  journal_reader.cpp  subscribe_to_tp.cpp
ipc++/include/: CircularBuffer.h  KdbIoDefs.h  KdbType.h
ipc++/src/: CMakeLists.txt  CircularBuffer.cpp  KdbType.cpp
ipc++/test/: CMakeLists.txt  CircularBufferIntegrationTest.cpp  CircularBufferTest.cpp  ConnectToKdbTest.cpp  ConnectToKdbTest.q  KdbIoMockDefs.h  KdbIpcMessageReaderTest.cpp  KdbIpcMessageReaderTest.q  KdbTypeTest.cpp  tenKQa.zipc
ipcjs/: README.md
ipcjs/app/: package.json
ipcjs/app/src/: AppRoot.js  Table.js  Table.module.css  index.js
ipcjs/app/src/kdb/: README.md
ipcjs/q/: serve.q
ipcjs/src/: ipc.js
ipcjs/static/html/: .index.html.swp  index.html
ipcjs/static/js/: ipc.js
krb5/: .gitignore  CMakeLists.txt  Notes-1.txt  Notes-2.txt  README.md
krb5/html/: index.html
krb5/q/: boot.q  krb5.q  util.q  web.q
krb5/src/: CMakeLists.txt  mg_krb_auth.c
log_filter/: CMakeLists.txt  README.md
log_filter/src/: .syntastic_c_config  CMakeLists.txt  log_filter.c
log_filter/test/: replay.q
mgq/src/: boot.q  krb5.q  util.q  web.q
mgq/test/: test.q  test_util.q
react/src/: .gitignore  AppRoot.js  ControlsPane.module.css  ResultPane.module.css  index.js
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: MgCircularBuffer.H  MgCore.H  MgDebug.H  MgFreeList.H  MgIoDefs.H  MgMapTypes.H
src/core/include-mocks/: MockMgIoDefs.H
src/core/src/: CircularBuffer.C  FreeList.C  MapTypes.C  PosixWrapperMocks.C  PosixWrappers.C  ReadFullyImpl.C
src/core/test/: CMakeLists.txt
src/core/test/src/: CircularBufferIntegrationTest.C  CircularBufferTest.C  CoreTest.C  FreeListTest.C  MapTypesTest.C
src/examples/: CMakeLists.txt  README.md
src/examples/src/: connect_to_kdb_app.C  journal_reader.C  mg_iou_test.C
src/ipc++/: CMakeLists.txt
src/ipc++/examples/: CMakeLists.txt  README.md  connect_to_kdb_lib.C  demo_circular_buffer.C  subscribe_to_tp.C  variadic_printer.C
src/ipc++/include/: MgKdbType.H
src/ipc++/src/: KdbType.C
src/ipc++/test/: CMakeLists.txt
src/ipc++/test/q/: ConnectToKdbTest.q  KdbIpcMessageReaderTest.q
src/ipc++/test/src/: ConnectToKdbTest.C  KdbIpcMessageReaderTest.C  KdbTypeTest.C
src/ipcjs/: README.md
src/ipcjs/q/: serve.q
src/ipcjs/react/: README.md  package-lock.json
src/ipcjs/react/src/: Types.js  Types.module.css
src/krb5/: CMakeLists.txt
src/krb5/q/: boot.q  krb5.q  server.q  util.q  web.q
src/krb5/src/: mg_krb5.c
src/kx_systems/: CMakeLists.txt
src/kx_systems/include/: MgKx.H  k.h
src/log_filter/: CMakeLists.txt
src/log_filter/q/: replay.q
src/log_filter/src/: log_filter.c
src/mgq/src/: boot.q  krb5.q  util.q  web.q
src/mgq/test/: test.q  test_util.q
src/ring/: CMakeLists.txt
src/ring/include/: MgCoro.H
src/ring/test/: CMakeLists.txt
src/ring/test/src/: CoroRingITest.C
src/tools/: Makefile  type_snoop.c  type_snoop.q
src/tpmux/: CMakeLists.txt  README.md
src/tpmux/include/: mg_coro_domain_obj.h  mg_coro_epoll.h  mg_coro_task.h  mg_fmt_defs.h  mg_io.h
src/tpmux/src/: mg_coro_app.cpp  mg_coro_epoll.cpp  mg_coro_kdb_connect.cpp  mg_coro_kdb_read_msg.cpp  mg_coro_kdb_recv_tcp_msgs.cpp  mg_coro_kdb_subscribe_replay.cpp  mg_coro_tcp_connect.cpp
src/tpmux/test/: CMakeLists.txt  test_pos.q  test_sym.q  test_tp.q
src/tpmux/test/src/: test_mg_coro_tcp_connect.cpp  test_mg_io.cpp
tpmux/: .gitignore  CMakeLists.txt  README.md
tpmux/docs/: Doxyfile  breathe.py
tpmux/include/: .syntastic_cpp_config  mg_coro_domain_obj.h  mg_coro_epoll.h  mg_coro_task.h  mg_defs.h  mg_fmt_defs.h  mg_io.h
tpmux/shed/: splice_test.cpp
tpmux/src/: .syntastic_cpp_config  CMakeLists.txt  app.cpp  mg_coro_app.cpp  mg_coro_epoll.cpp  mg_coro_kdb_connect.cpp  mg_coro_kdb_read_msg.cpp  mg_coro_kdb_recv_tcp_msgs.cpp  mg_coro_kdb_subscribe.cpp  mg_coro_kdb_subscribe_replay.cpp  mg_coro_tcp_connect.cpp  tpmux.c
tpmux/test/: .syntastic_cpp_config  CMakeLists.txt  test_mg_coro_tcp_connect.cpp  test_mg_io.cpp  test_pos.q  test_sym.q  test_tp.q
